--- a/app/src/main/res/layout/activity_count_down.xml
+++ b/app/src/main/res/layout/activity_count_down.xml
@@ -19,7 +19,13 @@
             android:hint="Minutes"
             android:inputType="number"
             android:maxLength="4" />
-
+        <EditText
+            android:id="@+id/edit_text_input_second"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:hint="Seconds"
+            android:inputType="number"
+            android:maxLength="4" />
         <Button
             android:id="@+id/button_set"
             android:layout_width="wrap_content"
